--- a/Server-side/war/webclient/src/view/facebook_login_button_view.html
+++ b/Server-side/war/webclient/src/view/facebook_login_button_view.html
@@ -1,5 +1,5 @@
-<div class="navbar-header navbar-right">
-    <div class="navbar-brand" ng-show="true">
-        <div class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="false" data-auto-logout-link="true"></div>
-    </div>
-</div>
+<ul class="nav navbar-nav navbar-right">
+            <li><div class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="false" data-auto-logout-link="true"></div></li>
+        </ul>
+    
+
