Angular material tutorial

--- a/Server-side/war/webclient/src/view/divesession_view_material.html
+++ b/Server-side/war/webclient/src/view/divesession_view_material.html
@@ -11,6 +11,7 @@
                             </tr>
                         </table>
                     </div>
+                    <md-divider ng-if="!$last"></md-divider>
                 </md-list-item>
                
             </md-list>          
