--- a/Server-side/war/webclient/src/shared/view/sidenav_view_material.html
+++ b/Server-side/war/webclient/src/shared/view/sidenav_view_material.html
@@ -1,7 +1,10 @@
 <md-sidenav class="md-sidenav-left" md-component-id="left">
     <md-list>
         <md-list-item>
-            <p>left Sidenav</p>
+            <p>User: {{freediver.externalUsername}}</p>
+        </md-list-item>
+        <md-list-item ng-show="fbStatus == 0">
+            <md-button ng-click="logout()">Logout</md-button>
         </md-list-item>
     </md-list>
 </md-sidenav>
