--- a/Server-side/war/webclient/src/shared/custom.css
+++ b/Server-side/war/webclient/src/shared/custom.css
@@ -2,6 +2,10 @@
   font-size: 12px;
   
 }
+.md-select , .md-select-value {
+  font-size: 12px;
+  
+}
 
 label {
   font-size: 12px;
@@ -9,7 +13,8 @@ label {
 }
 fieldset {
     font-size: 12px;
-    color: rgba(0,0,0,0.26);
+    color: rgba(0,0,0,1);
     border-color:rgba(0,0,0,0.26);
     display: inline-block;
+    border: 1px groove;
 }
